[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/BrushButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/pixel.png" type="Texture" id=2]

[node name="BrushButton" type="Button"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
button_mask = 3
script = ExtResource( 1 )

[node name="BrushTexture" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 34.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="DeleteButton" type="Button" parent="."]
visible = false
modulate = Color( 1, 0.00392157, 0.00392157, 0.709804 )
margin_left = 22.0
margin_right = 42.0
margin_bottom = 20.0
rect_scale = Vector2( 0.7, 0.7 )
text = "X"
[connection signal="mouse_entered" from="." to="." method="_on_BrushButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BrushButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_BrushButton_pressed"]
[connection signal="mouse_entered" from="DeleteButton" to="." method="_on_BrushButton_mouse_entered"]
[connection signal="mouse_exited" from="DeleteButton" to="." method="_on_BrushButton_mouse_exited"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
